--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+  <% if user_signed_in? %>
+      welcome <%= current_user.username %>
+    
+      <%= link_to "Account Setting", edit_user_registration_path %> |<%= link_to "Logout", destroy_user_session_path, method: :delete %><br/>
+  <% else %>
+      <%= link_to "Register", new_user_registration_path %> |<%= link_to "Login", new_user_session_path %><br/>
+  <% end %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
